--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <properties>
         <java.version>21</java.version>
         <mybatis.boot.version>2.2.2</mybatis.boot.version>
+        <google.guava.version>33.1.0-jre</google.guava.version>
     </properties>
 
     <dependencies>
@@ -51,6 +52,12 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>${mybatis.boot.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${google.guava.version}</version>
         </dependency>
 
         <dependency>
