--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <apache.lang3.version>3.14.0</apache.lang3.version>
         <apache.commons-collections4.version>4.5.0-M1</apache.commons-collections4.version>
         <alibaba.ttl.version>2.14.4</alibaba.ttl.version>
+        <alibaba.druid.stater.version>1.2.22</alibaba.druid.stater.version>
     </properties>
 
     <dependencies>
@@ -55,6 +56,13 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>${mybatis.boot.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.alibaba/druid-spring-boot-3-starter -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-3-starter</artifactId>
+            <version>${alibaba.druid.stater.version}</version>
         </dependency>
 
         <dependency>
