--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,28 +1,17 @@
-
 server:
   port: 80
   servlet:
     context-path: /i-home
-
+# spring配置
 spring:
   application:
     name: i-Home-app
-  # 数据源配置
-  datasource:
-    username: admin
-    password: 123456
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/i-home?useUnicode=true&characterEncoding=utf8&allowPublicKeyRetrieval=true
-      &useSSL=true&serverTimezone=UTC
-# MyBatis
-mybatis:
-  # 搜索指定包别名
-  typeAliasesPackage: club.bearbear.**.domain
-  # 配置mapper的扫描，找到所有的mapper.xml映射文件
-  mapperLocations: classpath*:mapper/**/*Mapper.xml
-  # 加载全局的配置文件
-  configLocation: classpath:mybatis/mybatis-config.xml
+  profiles:
+    # 数据源配置
+    active: druid
+# 自定义配置
 i-home:
+  # 线程池配置
   thread-pool:
     # 核心线程数
     core-size: 20
@@ -35,3 +24,16 @@ i-home:
     # 线程名前缀
     name-prefix: i-Home
 
+# MyBatis
+mybatis:
+  # 搜索指定包别名
+  typeAliasesPackage: club.ihome.**.domain
+  # 配置mapper的扫描，找到所有的mapper.xml映射文件
+  mapperLocations: classpath*:mapper/**/*Mapper.xml
+  # 加载全局的配置文件
+  configLocation: classpath:mybatis/mybatis-config.xml
+
+# Logger Config
+logging:
+  level:
+    com.hexadecimal: debug
