--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,6 +40,9 @@ i-home:
     keep-alive: 300
     # 线程名前缀
     name-prefix: i-Home
+  # security config
+  auth:
+    ignore-url: /api/user-auth/sign-in,/api/user-auth/sign-up
 
 # MyBatis
 mybatis:
@@ -53,6 +56,6 @@ mybatis:
 # Logger Config
 logging:
   level:
-    club.snow: info
-    org.springframework: warn
+    club.snow: debug
+    org.springframework: debug
 
