--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,7 +41,7 @@ i-home:
   # security config
   auth:
     # 不需验证地址
-    ignore-url: /api/user-auth/sign-in,/api/user-auth/sign-up,/api/user-auth/captcha
+    ignore-url: /api/user-auth/sign-in,/api/user-auth/sign-up,/api/user-auth/captcha,/api/**
   captcha:
     # 验证码类型 math 数组计算 char 字符验证
     type: math
